test/parser/fail/novarall.ang
f : forall . List Nat -> List Nat
f = map S